--- a/style2.css
+++ b/style2.css
@@ -360,6 +360,30 @@
         left:17%;
         color: #000;
         font-size: 80%;
+    }
+  
+   .input-container1{
+        position: relative;
+        border-radius: 75px;
+        text-align: center;
+    }
+    .input-container1 input {
+    border: 2px solid rgba(10, 1, 1, 0.507);
+    color: rgba(155, 17, 113, 0.815);
+    }
+    .input-container1 label {
+        position: absolute;
+        top: 7px;
+        left: 31%;
+        color: rgba(145, 15, 15, 0.651);
+        transition: 0.3s;
+        font-size: 50%;
+    }
+    .input-container1 input:focus + label,.input-container1 input:not(:placeholder-shown) + label {
+        top: -15px;
+        left:17%;
+        color: #000;
+        font-size: 80%;
     } 
 
     /* ================== */
