--- a/style2.css
+++ b/style2.css
@@ -1,11 +1,11 @@
 
 @media screen and (min-width: 800px){
-    body {
+   /* body {
         background-color: #3c3c3c;
 
 
     }
-
+*/
 
     .btn {
         position: relative;
