--- a/style2.css
+++ b/style2.css
@@ -1,6 +1,11 @@
 
 @media screen and (min-width: 800px){
 
+    body {
+        background-color: #3c3c3c;
+
+
+    }
 
     .btn {
         position: relative;
